Implemented [about section]

--- a/index.html
+++ b/index.html
@@ -63,6 +63,33 @@
 
 
     <!-- Sandeep's Section - About & Why Choose Us -->
+     <section id="about" class="why-us">
+        <div class="container">
+            <h2>Why Choose Us</h2>
+            <div class="benefits-grid">
+                <div class="benefit-card glass-card">
+                    <i class="fas fa-users tech-icon"></i>
+                    <h3>Expert Team</h3>
+                    <p>Skilled professionals with years of industry experience.</p>
+                </div>
+                <div class="benefit-card glass-card">
+                    <i class="fas fa-clock tech-icon"></i>
+                    <h3>Timely Delivery</h3>
+                    <p>We meet deadlines without compromising quality.</p>
+                </div>
+                <div class="benefit-card glass-card">
+                    <i class="fas fa-handshake tech-icon"></i>
+                    <h3>Client-Focused</h3>
+                    <p>Your success is our priority.</p>
+                </div>
+                <div class="benefit-card glass-card">
+                    <i class="fas fa-shield-alt tech-icon"></i>
+                    <h3>Secure Solutions</h3>
+                    <p>Enterprise-grade security in everything we build.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Himanga's Section - Portfolio & Clients -->
