Implemented [Services Section]

--- a/index.html
+++ b/index.html
@@ -61,6 +61,34 @@
 
     <!-- Achitha's Section - Services -->
 
+    <section id="services" class="services">
+        <div class="container">
+            <h2>What We Do</h2>
+            <div class="services-grid">
+                <div class="service-card glass-card">
+                    <i class="fas fa-code tech-icon"></i>
+                    <h3>Custom Software Development</h3>
+                    <p>Tailored solutions designed to meet your specific business needs.</p>
+                </div>
+                <div class="service-card glass-card">
+                    <i class="fas fa-mobile-alt tech-icon"></i>
+                    <h3>Mobile App Development</h3>
+                    <p>Native and cross-platform mobile applications for iOS and Android.</p>
+                </div>
+                <div class="service-card glass-card">
+                    <i class="fas fa-cloud tech-icon"></i>
+                    <h3>Cloud Solutions</h3>
+                    <p>Scalable cloud infrastructure and migration services.</p>
+                </div>
+                <div class="service-card glass-card">
+                    <i class="fas fa-robot tech-icon"></i>
+                    <h3>AI & Machine Learning</h3>
+                    <p>Intelligent solutions powered by cutting-edge AI technology.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Sandeep's Section - About & Why Choose Us -->
 
