--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!-- Sandeep's Section - About & Why Choose Us -->
      <section id="about" class="why-us">
         <div class="container">
-            <h2>Why Choose Us</h2>
+            <h2>why We are the Righrt Choice</h2>
             <div class="benefits-grid">
                 <div class="benefit-card glass-card">
                     <i class="fas fa-users tech-icon"></i>
